--- a/index.html
+++ b/index.html
@@ -667,7 +667,13 @@
                             <td>2022-23</td>
                             <td><span style="color: var(--primary); font-weight: bold;">Grade A+</span></td>
                         </tr>
-                    </tbody>
+                        <tr>
+        <td><strong>Data Analytics Professional</strong></td>
+        <td>Ducat Institute</td>
+        <td>2024-25</td>
+        <td><span style="color: var(--primary); font-weight: bold;">Grade A</span></td>
+    </tr>
+</tbody>
                 </table>
             </div>
         </section>
