Revise profile details and skills for Cybersecurity focus
Updated professional title and skills to reflect a focus on Cybersecurity. Enhanced the description in the About Me section and updated the institution name for the Data Analytics Professional certification.

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
         <img src="https://danish0.vercel.app/certificate_it_studies2.jpg" alt="Danish Kassar" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend', '<div style=\'width:140px;height:140px;background:#ccc;border-radius:50%;display:flex;align-items:center;justify-content:center;color:#555;margin-bottom:20px;\'>Profile Image</div>')">
         
         <h1>Hi, I'm Danish Kassar</h1>
-        <p>Data Analyst | Web Developer | Digital Marketer</p>
+        <p>Data Analyst | Web Developer | Cybersecurity Enthusiast</p>
 
         <!-- Social Links - Hero Section (Logos aur Links) -->
         <div class="social-links">
@@ -622,9 +622,9 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <p>
-                    I am a versatile tech professional with a diverse background in <strong>Data Analytics</strong>, <strong>Web Development</strong>, and <strong>Digital Marketing</strong>. 
-                    Having completed a rigorous Data Analytics program at Ducat and an Advanced Diploma in IT (ADIT) with an <strong>A+ Grade</strong>, I possess strong analytical and technical skills. 
-                    I also hold a specialized certification in <strong>Ethical Hacking</strong>. My goal is to bridge the gap between raw data and strategic decision-making while building robust digital solutions.
+                    I am a versatile tech professional with a diverse background in <strong>Data Analytics</strong>, <strong>Web Development</strong>, and <strong>Cybersecurity</strong> (Ethical Hacking). 
+                    I have a specialized certification in **Ethical Hacking**, allowing me to understand system vulnerabilities and build more secure digital solutions. 
+                    Coupled with a rigorous Data Analytics program (Ducat) and an Advanced Diploma in IT (ADIT, Grade A+), I possess strong technical and analytical skills, focusing on turning complex data into actionable insights while maintaining security best practices.
                 </p>
                 <div class="about-details">
                     <div class="about-badge">📚 Reading</div>
@@ -650,6 +650,12 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td><strong>Data Analytics Professional</strong></td>
+                            <td>Ducat, Noida</td> <!-- Institution updated to Noida -->
+                            <td>2024-2025</td>
+                            <td><span style="color: var(--primary); font-weight: bold;">Grade A</span></td> <!-- Score updated to Grade A -->
+                        </tr>
+                        <tr>
                             <td><strong>Intermediate (12th Science)</strong></td>
                             <td>S D Inter College, Titavi (U.P. Board)</td>
                             <td>2023</td>
@@ -667,13 +673,7 @@
                             <td>2022-23</td>
                             <td><span style="color: var(--primary); font-weight: bold;">Grade A+</span></td>
                         </tr>
-                        <tr>
-        <td><strong>Data Analytics Professional</strong></td>
-        <td>Ducat Institute</td>
-        <td>2024-25</td>
-        <td><span style="color: var(--primary); font-weight: bold;">Grade A</span></td>
-    </tr>
-</tbody>
+                    </tbody>
                 </table>
             </div>
         </section>
@@ -682,6 +682,8 @@
         <section id="skills">
             <h2 class="section-title">Technical Skills</h2>
             <div class="skills-grid">
+                
+                <!-- Existing Skills -->
                 <div class="skill-card">
                     <div class="skill-name">Web Development</div>
                     <div class="skill-desc">HTML, CSS, Responsive Design</div>
@@ -695,6 +697,10 @@
                     <div class="skill-desc">Dashboarding & Data Visualization</div>
                 </div>
                 <div class="skill-card">
+                    <div class="skill-name">Tableau</div>
+                    <div class="skill-desc">Advanced Data Visualization, BI Dashboards</div>
+                </div>
+                <div class="skill-card">
                     <div class="skill-name">Advanced Excel</div>
                     <div class="skill-desc">Data Analysis & Reporting</div>
                 </div>
@@ -706,6 +712,19 @@
                     <div class="skill-name">Python</div>
                     <div class="skill-desc">Automation & Data Handling</div>
                 </div>
+                <div class="skill-card">
+                    <div class="skill-name">Ethical Hacking</div>
+                    <div class="skill-desc">Cybersecurity, Vulnerability Assessment, Pen Testing</div>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-name">Statistics</div>
+                    <div class="skill-desc">Hypothesis Testing, Statistical Modeling, Inferential Analysis</div>
+                </div>
+                <div class="skill-card">
+                    <div class="skill-name">MongoDB</div>
+                    <div class="skill-desc">NoSQL Database, Data Modeling & Management</div>
+                </div>
+
             </div>
         </section>
 
@@ -732,7 +751,7 @@
                     </div>
                     <div class="cert-info">
                         <div class="cert-title">Data Analytics Professional</div>
-                        <div class="cert-sub">Ducat • 2024-2025</div>
+                        <div class="cert-sub">Ducat, Noida • 2024-2025</div>
                     </div>
                 </div>
 
