--- a/index.html
+++ b/index.html
@@ -649,6 +649,14 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <!-- NEW ENTRY ADDED HERE -->
+                        <tr>
+                            <td><strong>B.A. (Bachelor of Arts)</strong></td>
+                            <td>Shamli (Ongoing - 2nd Year)</td>
+                            <td>Ongoing</td>
+                            <td><span style="color: var(--primary); font-weight: bold;">N/A</span></td>
+                        </tr>
+                        <!-- EXISTING ENTRIES FOLLOW -->
                         <tr>
                             <td><strong>Data Analytics Professional</strong></td>
                             <td>Ducat, Noida</td> <!-- Institution updated to Noida -->
@@ -875,3 +883,4 @@
 
 </body>
 </html>
+
